<resources>
    <string name="app_name">Babilonia</string>
    <string name="website">babilonia.io</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="allow">Allow</string>
    <string name="deny">Don\'t Allow</string>
    <string name="views">Views</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="publish">Publish</string>
    <string name="published">Published</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="my_listings">My Listings</string>
    <string name="my_listings_empty">You have not added any\nlistings yet</string>
    <string name="my_listings_empty_button">Add new listing</string>
    <string name="my_listings_empty_published">You have no published listings</string>
    <string name="my_listings_empty_not_published">All your listings are published</string>
    <string name="my_listings_empty_published_body">You can publish listings from draft or add a new one</string>
    <string name="add_new_listing">Add new listing</string>
    <string name="location_rationale_title">Allow "Babilonia" to access your location?</string>
    <string name="location_rationale_body">Your current location will be displayed on the map and used for nearby search results.</string>
    <string name="location_unavailable_title">Turn on location services</string>
    <string name="location_unavailable_body">Please, turn on GPS so we can find listings near you. It may take some time for GPS to find your location.</string>
    <string name="location_unavailable_go_to_settings">Settings</string>
    <string name="location_unavailable_not_now">Not now</string>
    <string name="location_not_found">Location not found</string>
    <string name="recent_searches">Recent searches</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="long_dash">\u2014</string>
    <string name="top_listings">Top Listings</string>
    <string name="listing_type">Listing type</string>
    <string name="create_new_listing">Create new listing</string>
    <string name="property_type">Property type</string>
    <string name="property_facilities">Property facilities</string>
    <string name="sale">Sale</string>
    <string name="all">All</string>
    <string name="rent">Rent</string>
    <string name="for_sale">for Sale</string>
    <string name="for_rent">for Rent</string>
    <string name="area">Area</string>
    <string name="area_square_meters">Area, m²</string>
    <string name="total_area_square_meters">Total area, m²</string>
    <string name="built_area_square_meters">Covered area, m²</string>
    <string name="total_area_prefix">Total area:</string>
    <string name="built_area_prefix">Covered area:</string>
    <string name="general">General</string>
    <string name="details">Details</string>
    <string name="facilities">Facilities</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_details">Advanced Details</string>
    <string name="photos">Photos</string>
    <string name="about_your_home">About your place</string>
    <string name="continue_creating">Continue (%d/%d)</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="pick_selected_location">Pick selected location</string>
    <string name="cant_find_user_location">Can not detect user location</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="pet_friendly">Pet friendly</string>
    <string name="price_for_sale">Price, USD</string>
    <string name="price_for_rent">Price per month, USD</string>
    <string name="unnamed_road">Unnamed Road</string>
    <string name="close">Close</string>
    <string name="MPD_action_done">OK</string>
    <string name="MPD_action_cancel">Close</string>
    <string name="year_of_construction">Year of construction</string>
    <string name="lets_s_start">Let\'s start</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOGIN</string>
    <string name="no_facilities_hint">%1$s has no facilities, so let\'s skip this step</string>
    <string name="no_advanced_details_hint">%1$s has no advanced details, so let\'s skip this step</string>
    <string name="no_general_details_hint">%1$s has no general details, so let\'s skip this step</string>
    <string name="preview">Preview</string>
    <string name="empty_photos_hint">Choose photos that best\nrepresent your property</string>
    <string name="upload_photos">Upload photos</string>
    <string name="select_image">Select Image</string>
    <string name="main_image">Main image</string>
    <string name="upload_more_photos">Upload more photos (%d/%d)</string>
    <string name="set_as_main_picture">Set as main picture</string>
    <string name="delete_picture">Delete picture</string>
    <string name="camera">Camera</string>
    <string name="avatar_picture_format_description">The picture must be in png, jpg or jpeg format.</string>
    <string name="gallery">Gallery</string>
    <string name="year">Year</string>
    <string name="exit">Exit</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="parking_slots">Parking slots</string>
    <string name="total_floors">Total floors</string>
    <string name="floor_number">Floor number</string>
    <string name="floor_number_numb">Floor #%d</string>
    <string name="parking">Parking</string>
    <string name="parking_for_visitors">Parking for visitors</string>
    <string name="parking_for_visitors_short">prk for visitors</string>
    <string name="warehouse">Warehouse</string>
    <string name="about_this_home">About This Place</string>
    <string name="show_more">Show More</string>
    <string name="show_details">Show details</string>
    <string name="park_numb">%d prk slots</string>
    <string name="beds_numb_small">%d bd</string>
    <string name="bath_numb_small">%d ba</string>
    <string name="area_numb">%1$s m²</string>
    <string name="price_per_meter">$%1$s/m²</string>
    <string name="built_in">Built in %1$s</string>
    <string name="property_for_sale">%1$s for %2$s</string>
    <string name="property_for_sale_small">%1$s \nfor %2$s</string>
    <string name="uploading">Uploading</string>
    <string name="per_month">per month</string>
    <string name="published_listing">Published listing</string>
    <string name="unpublished_listing">Unpublished listing</string>
    <string name="not_published_listing">Not published listing</string>
    <string name="about_home">About place</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="draft">In Draft</string>
    <string name="unpublished">Unpublished</string>
    <string name="not_published_tab_name">Not Published</string>
    <string name="not_published">Not Published</string>
    <string name="expired">Expired</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="email">Email</string>
    <string name="password">Pasword</string>
    <string name="phone_number">Phone number</string>
    <string name="currency">Currency</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions_underline"><u>Terms and Conditions of Advertising Contracting.</u></string>
    <string name="email_saved">Email saved!</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change">Change</string>
    <string name="invalid_email">Email format is invalid</string>
    <string name="email_already_taken">Email has already been taken</string>
    <string name="change_name">Change name</string>
    <string name="full_name">Full name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="photo_uploaded">Photo successfully uploaded!</string>
    <string name="user_updated">User updated!</string>
    <string name="log_out">Sign out</string>
    <string name="your_favorites_are_empty">Your favorites are empty</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="empty_favorites_subtitle">For adding Listing to list press ♡ icon on preview. You also will receive updates about new photos and price changing</string>
    <string name="create_profile">Create Profile</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload_photo_progress">Setting Profile Photo…</string>
    <string name="first_name_empty">First name is empty</string>
    <string name="last_name_empty">Last name is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="invalid_phonenumber">Phone number format is invalid</string>
    <string name="field_should_not_be_empty">The field shouldn\'t be empty</string>
    <string name="sing_out_title">Sign out?</string>
    <string name="sign_out_message">You will not be able to search properties and receive any notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_title">Delete account?</string>
    <string name="delete_account_message">Your account will be permanently deleted</string>
    <string name="delete_account">Delete account</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="contact_button_hint">This call may incur additional costs</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="edit_details">Edit details</string>
    <string name="unpublish">Unpublish</string>
    <string name="unpublish_confirmation_title">Unpublish listing?</string>
    <string name="unpublish_confirmation_rbBailonia">I sold it with Babilonia</string>
    <string name="unpublish_confirmation_rbPortal">I sold it with another portal</string>
    <string name="unpublish_confirmation_rbSocial">I sold it on social networks</string>
    <string name="unpublish_confirmation_rbReferrals">I sold it through referrals</string>
    <string name="unpublish_confirmation_rbSell">I didnt get to sell it</string>
    <string name="unpublish_confirmation_body">You can publish it again later at anytime</string>
    <string name="unpublish_confirmation_reason">I sold it at:</string>
    <string name="publish_confirmation_body">Are you sure you want to publish the listing?</string>
    <string name="delete_confirmation_title">Delete listing?</string>
    <string name="delete_confirmation_body">Are you sure you want to delete this information? The action can not be undone.</string>
    <string name="delete_draft">Delete draft</string>
    <string name="delete">Delete</string>
    <string name="delete_listing_success_message">Listing deleted successfully!</string>
    <string name="search_by_address">District, province or city</string>
    <string name="no_matching_results">No matching results…</string>
    <string name="try_change_your_search_criteria">Try changing your search criteria.</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="ar_dialog_title">Search for Properties using AR</string>
    <string name="ar_dialog_description">Are you interested in the area where you are? Explore it with our AR and discover which properties are for sale or rent. Click on navigate and we will take you by the shortest route…</string>
    <string name="got_it">Got it</string>
</resources>